--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,12 @@
     ],
     "require": {
         "php": ">7.1",
+        "ext-pdo": "*",
+        "ext-json": "*",
         "happgo/lib": "dev-master"
+    },
+    "require-dev": {
+        "eaglewu/swoole-ide-helper": "dev-master"
     },
     "autoload": {
         "psr-4": {
